hphp/test/slow/switch_statement/empty_invalid.php.expectf
Fatal error: Switch statements need to have at least one case or a default block in %s on line 5
